:art: Resolve misalignment for regex dropdown

--- a/styles/rule-builder.less
+++ b/styles/rule-builder.less
@@ -26,7 +26,6 @@
     .form-group {
       .form-control:first-child {
         border-radius: 3px 0 0 3px;
-        margin-bottom: 3px;
       }
     }
 
